Allow GL_{DRAW,READ}_FRAMEBUFFER on OpenGL ES3 without CHROMIUM_framebuffer_multisample

Even if GL_CHROMIUM_framebuffer_multisample isn't available (such as on Qualcomm), this allows
glBindFramebuffer(GL_{DRAW,READ}_FRAMEBUFFER, ...) on ES3 command buffer
without throwing GL_INVALID_ENUM.

BUG=674357
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2576273002
Cr-Commit-Position: refs/heads/master@{#438881}

Former-commit-id: 99c05525dbe876d59c7997c4821d1f4c4092c548