gpu/command_buffer/client/gles2_implementation.cc
@@ -836,7 +836,8 @@ bool GLES2Implementation::GetHelper(GLenum pname, GLint* params) {
       *params = bound_pixel_unpack_transfer_buffer_id_;
       return true;
     case GL_READ_FRAMEBUFFER_BINDING:
-      if (IsChromiumFramebufferMultisampleAvailable()) {
+      if (capabilities_.major_version >= 3 ||
+          IsChromiumFramebufferMultisampleAvailable()) {
         *params = bound_read_framebuffer_;
         return true;
       }
@@ -4359,20 +4360,16 @@ void GLES2Implementation::BindFramebufferHelper(
       }
       break;
     case GL_READ_FRAMEBUFFER:
-      if (!IsChromiumFramebufferMultisampleAvailable()) {
-        SetGLErrorInvalidEnum("glBindFramebuffer", target, "target");
-        return;
-      }
+      DCHECK(capabilities_.major_version >= 3 ||
+          IsChromiumFramebufferMultisampleAvailable());
       if (bound_read_framebuffer_ != framebuffer) {
         bound_read_framebuffer_ = framebuffer;
         changed = true;
       }
       break;
     case GL_DRAW_FRAMEBUFFER:
-      if (!IsChromiumFramebufferMultisampleAvailable()) {
-        SetGLErrorInvalidEnum("glBindFramebuffer", target, "target");
-        return;
-      }
+      DCHECK(capabilities_.major_version >= 3 ||
+          IsChromiumFramebufferMultisampleAvailable());
       if (bound_framebuffer_ != framebuffer) {
         bound_framebuffer_ = framebuffer;
         changed = true;
